...
    <string name="dialog_action_complete">Complete Action Using</string>
    <string-array name="dialog_complete_action_items">
        <item>1. Gallery</item>
        <item>2. No Wallpaper</item>
    </string-array>

    <string name="email">E-mail address</string>
    <string name="email_cannot_be_empty">E-mail address cannot be empty</string>

    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="accept_terms_and_conditions">You should accept terms and conditions to Sign Up</string>
    <string name="accept_terms_conditions">I accept the Terms and Conditions</string>

    <string name="log_in">Log in</string>

    <string name="new_password">New Password</string>

    <string name="pass_validation_text">Password must be of atleast eight character length containing atleast one special character, one number and one capital letter</string>
    <string name="about_fundation">Organization Of SUSI.AI </string>
    <string name="foundation_detail">SUSI.AI application has been made by Fossasia organization. Fossasia is a famous organization of Singapore, It has developed this app, this organization has developed many famous applications like pslab, neurolab etc.</string>
    <string name="password">Password</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>

    <string name="sample_website_description">Sample Text Extracted from a website</string>
    <string name="sample_website_headline">Website Sample Headline</string>
    <string name="sample_website_link">Website Link</string>

    <string name="share_items">Share</string>

    <string name="sign_up">SIGN UP</string>
    <string name="existing_user_login">Existing User?\n Click here to Login</string>
    <string name="terms_condition">Terms and Conditions</string>

    <string name="url_cannot_be_empty">URL cannot be empty</string>

    <!-- Login Screen-->
...
    <string name="sample_group">Sample Group</string>

    <string name="skill_name">Skill Name</string>

    <string name="search_skill">Search Skill</string>

    <string name="skip">Skip</string>

    <string name="slide_1_desc">Log in on the app using a SUSI.AI account, sign up to create a new account or just skip logging in altogether.</string>
    <string name="slide_1_title">Log in</string>
    <string name="slide_2_desc">Interact with SUSI.AI by asking questions. Use the microphone button for voice interaction.</string>
    <string name="slide_2_title">Chat Interface</string>
    <string name="slide_3_desc">Browse and try your favorite SUSI.AI skill</string>
...
