<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/padding_large"
    android:paddingLeft="@dimen/padding_large"
    android:paddingRight="@dimen/padding_large"
    android:paddingStart="@dimen/padding_large"
    android:paddingTop="10dp">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/customer_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small_medium"
        android:text="@string/custom_server" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_moderate"
        android:visibility="gone"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_url_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_input"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>